--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </section>
 
 <footer>
-    <p>Rza'rshy Ra'zz 2021 | all right reserved</p>
+    <p>Raza'rshy Ra'zz 2021 | all right reserved</p>
 </footer>
 
 
